src/test/ui/async-await/dont-suggest-missing-await.stderr
error[E0308]: mismatched types
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
  --> $DIR/dont-suggest-missing-await.rs:16:18
=======
  --> $DIR/dont-suggest-missing-await.rs:14:18
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL |         take_u32(x)
   |                  ^ expected u32, found opaque type
   |
   = note: expected type `u32`
              found type `impl std::future::Future`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
